// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with 1`] = `
"<p>this plugin does</p>
<ul>
<li>&#x26; -> &#x26;#x26;</li>
<li>&#x26;amp; -> &#x26;#x26;amp;</li>
<li>&#x26;eacute; -> &#x26;#x26;eacute;</li>
</ul>"
`;

exports[`without 1`] = `
"<p>remark does</p>
<ul>
<li>&#x26; -> &#x26;#x26;</li>
<li>&#x26;amp; -> &#x26;#x26;</li>
<li>&#x26;eacute; -> é</li>
</ul>"
`;
